--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="css/preset/preset.css">
-  <!-- Put CSS Link here!-->
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+
   <title>CSS Practice</title>
 </head>
 <body>
 	<div id="title-section">
     <h1>The Ultimate CSS Walkthrough</h1>
     <h2>An Introduction to Cascading Style Sheets</h2>
-  </div>
+  </div> 
   <hr>
   <div id="welcome">
     <p>Welcome! We're excited to have you here. Today, we'll be walking through learning CSS. It's going to be awesome.
