--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <hr>
   <div class="info-section">
     <h3>Tell me about CSS Syntax...</h3>
-    <p>CSS syntax is very consistent, regardless of what you're styling. The selector chooses the element whose formatting you want to change, in this example, all h1 tags. The declaration explains how to change selected the element.  Here, all h1 tags will have their text changed to blue and the font size set at 12 pixels.</p>
+    <p class = myClass>CSS syntax is very consistent, regardless of what you're styling. The selector chooses the element whose formatting you want to change, in this example, all h1 tags. The declaration explains how to change selected the element.  Here, all h1 tags will have their text changed to blue and the font size set at 12 pixels.</p>
     <img src="images/selector.gif">
     <p>Make sure to add those semi-colons to the end of each declaration!  You can have as many declarations as you like for each selector.</p>
     <p>It is possible to not only turn all h1 elements blue, but also make them to different fonts and sizes, give them borders, turn them upside-down, add them 3d effects, and even animate them! </p>
